# pymars

./: .gitignore  .readthedocs.yml  00_START_HERE.md  ALGORITHMS_MARS_CORRECTED.tex  CORRECTIONS_COMPLETE.txt  CORRECTIONS_LATEX_DOCUMENT.md  CORRECTIONS_MINSPAN_ENDSPAN.txt  CORRECTIONS_SUMMARY.md  CUBIC_QUICK_SUMMARY.txt  CUBIC_VERIFICATION_REPORT.md  DETAILED_CHANGES.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_VERIFICATION.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_STATUS.md  FINAL_STATUS.txt  GITHUB_PUSH_GUIDE.md  INDEX_VERIFICATION.txt  INSTALL.md  INSTRUCTIONS_UTILISATION.txt  LICENSE  MANIFEST.in  PROJECT_COMPLETION_REPORT.txt  PROJECT_FINAL_VERIFICATION.md  PROJECT_STRUCTURE.md  QUICK_COMPARISON_LATEX.md  QUICK_SUMMARY.txt  RAPPORT_VERIFICATION.txt  README.md  README_CORRECTIONS.txt  README_DEPLOYMENT.md  README_LATEX_FINAL.md  README_VERIFICATION.txt  SOLUTION_PLOT_FIX.py  TEST_GUIDE.md  VERIFICATION_MINSPAN_ENDSPAN.py  pyproject.toml  quick_validation.py  requirements.txt  test_comprehensive_fixes.py  (+2 more)
docs/: advanced_topics.rst  algorithms.rst  api_reference.rst  changelog.rst  conf.py  cubic_extension.rst  developer_guide.rst  index.rst  installation.rst  interactions.rst  model_selection.rst  plots.rst  references.rst  requirements.txt  theory.rst  tutorial.rst  user_guide.rst
exemples/: demo_regression.py
pymars/: __init__.py  basis.py  cubic.py  gcv.py  interactions.py  mars.py  model.py  plots.py  utils.py
tests/: test_basis.py  test_cubic.py  test_mars.py
